src/components/Work/ProjectSection/ProjectSection.scss
@import '../../assets/Global.scss';
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');

.project-card {
    display: flex;
    flex-direction: row;
    justify-content: flex-start;
    align-items: center;
    height: 100%;
    width: 100%;
    font-family: 'Poppins', Arial;
    margin: 10% 0;
    .left-section {
        border: 2px solid black;
        border-radius: 5px;
        width: 60%;
        height: 400px;
        overflow: hidden;

        img {
            width: 100%;
            height: 100%;
            object-fit: cover;
            object-position: center;
            position: relative;
            // z-index: 99;
            // opacity: 0;
            &::after {
                border:2px solid green;
                content: "";
                top:0;
                left: 0;
                position: absolute;
                width: 110px;
                height: 110px;
                color: black;
                background-color: black;
                z-index: 99;
            }
        }
    }


    .right-section {
        width: 50%;
        height: 200px;
        margin-left: -9%;
        margin-top: 5%;
        flex-direction: column;
        justify-content: space-around;
        align-items: right;

        h4 {
            color: red;

        }

        .featured,
        .project-name,
        .project-techs,
        .project-discription,
        .project-links {
            justify-content: flex-end;
            width: 100%;
            margin: 0;
            padding: 0;
        }

        .project-discription {
            border: 5px solid black;
            border-radius: 5px;
            text-align: center;
            background-color: white;
            width: 100%;
            height: 50%;
            align-items: center;
        }

        .project-techs {
            padding: 0;
            margin: 1%;

            li {
                // border: 2px solid black;
                width: auto;
                // height: 1ch;
                margin: 0 3%;
            }
        }

        .project-links {
            list-style-type: none;
            margin: 1%;
            li {
                margin: auto 10px;
                height: 26px;
                width:  26px;
            }
        }
    }
}

@media (max-width: $mobileView) {
    .project-card{
        flex-direction: column;
        margin: auto;
        margin-bottom: 100px;  
        .left-section{
            width: 80vw;
            z-index: 1;
            height: 300px;
        }
        .right-section{
            width: 80vw;
            z-index: 2;
        }
    }
}

